# cooklang-store

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  MILESTONE_CATEGORY_PATH_REFACTOR.md  PHASE1_CHECKLIST.md  PHASE2_CHECKLIST.md  PROJECT_PLAN.md  README.md  RECIPE_FIXTURES_CREATED.md  RECIPE_FIXTURES_UPDATED.md  TASK_DOCKER_SMOKE_TESTS.md  TASK_PHASE2_4_TESTS.md  TEST_RECIPES_ANALYSIS.md  docker-compose.yml
.devcontainer/: README.md  devcontainer.json
.github/: WORKFLOWS.md
.github/workflows/: coverage.yml  docker-build.yml  rust-tests.yml
docs/: API.md  CI-CD.md  DOCKER-TESTING.md  SAMPLE-RECIPES.md  STORAGE.md  TESTING.md  openapi.yaml  postman-collection.json
milestones/category-path-refactor/: milestone.md
milestones/category-path-refactor/phases/: 01-api-spec.md  02-core-logic.md  03-api-response-layer.md  04-api-handlers.md  05-documentation.md  06-testing-verification.md
milestones/category-path-refactor/tasks/: TASK-01-unit-tests.md  TASK-01-update-response-structs.md  TASK-02-integration-tests.md  TASK-02-update-request-structs.md  TASK-03-api-contract-tests.md  TASK-04-coverage-quality.md  TASK-5-1-update-postman-collection.md  TASK-5-2-update-sample-recipes.md  TASK-5-3-update-readme.md  TASK-docker-smoke-tests.md  TASK-phase2-4-tests.md
scripts/: docker-test.sh
src/: cache.rs  git.rs  lib.rs  main.rs  repository.rs
src/api/: handlers.rs  mod.rs  models.rs  responses.rs
src/parser/: mod.rs
src/storage/: disk.rs  git.rs  mod.rs
tests/: TEST_SETUP.md  api_integration_tests.rs  common.rs  disk_storage_tests.rs  git_storage_tests.rs
tests/fixtures/: README.md  TEST_MAPPING.md  authors-dinner.cook  cake.cook  cheesecake.cook  chicken-biryani.cook  chocolate-cake.cook  flan.cook  green-curry.cook  original-name.cook  pad-thai.cook  pasta.cook  recipe-1.cook  recipe-2.cook  spaghetti.cook  test-recipe.cook  thai-green-curry.cook  tiramisu.cook  to-delete.cook  updated-name.cook  vanilla-cake.cook
