[package]
name = "cooklang-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "cooklang_backend"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# In-memory caching
dashmap = "5.5"

# Cooklang parser
cooklang = "0.6"

# Git operations
git2 = "0.18"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Time/date handling
chrono = { version = "0.4", features = ["serde"] }

# String utilities
regex = "1.10"
lazy_static = "1.4"

# File system walking
walkdir = "2.4"
sha2 = "0.10.9"

[dev-dependencies]
# Testing
http-body-util = "0.1"
tempfile = "3.8"
